# qp_solver

./: README.md
qp_solver/: CMakeLists.txt  package.xml
quadrotor_trajectory/: CMakeLists.txt  package.xml
quadrotor_trajectory/config/: TrajectoryEstimate.cfg  real_data.rviz  trajectory_visualization.rviz
quadrotor_trajectory/include/quadrotor_trajectory/: QuadrotorCommand.h  TruckTrajectoryEstimator.h  VehicleTrajectoryBase.h  VehicleTrajectoryEstimator.h
quadrotor_trajectory/launch/: quadrotor_trajectory.launch  quadrotor_trajectory.launch~
quadrotor_trajectory/msg/: TrackParamStamped.msg
quadrotor_trajectory/qpOASES/: CMakeLists.txt
quadrotor_trajectory/script/: simulate_truck_position.py  trajectory_path_visualization.py
quadrotor_trajectory/src/: QuadrotorCommand.cpp  TruckTrajectoryEstimator.cpp  VehicleTrajectoryBase.cpp  VehicleTrajectoryEstimator.cpp  truck_trajectory_estimator_node.cpp  vehicle_trajectory_estimator_node.cpp
